--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -5,7 +5,6 @@
 }
 
 body{
-    background-color: rgb(255, 141, 141);
     color: white;
     display: flex;
     align-items: center;
@@ -34,6 +33,9 @@ body{
     border: none;
     text-align: center;
     font-family: "Montserrat", sans-serif;
+    outline-width: 2px;
+    outline-style: solid;
+    outline-color: #8f0000;
 }
 .main input[type="search"]::placeholder{
     text-align: center;
@@ -62,11 +64,88 @@ body{
     color: #8f0000;
     cursor: pointer;
     font-family: "Montserrat", sans-serif;
-    font-size: 15px;
+    font-size: 13px;
 }
 .procurar button[type="submit"]:hover{
     background-color: #8f0000;
     border-color: #ffffff;
     color: white;
     font-family: "Montserrat", sans-serif;
+}
+.iniciais{
+    text-align: center;
+    margin-bottom: 40px;
+    color: #8f0000;
+    font-size: 1.5rem;
+}
+.pokedex{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-block: 20px;
+}
+
+ol.pokemons{
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    grid-template-rows: repeat(3, auto);
+    gap: 10px;
+    list-style: none;
+}
+.pokemon{
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+    color: rgb(0, 134, 7);
+    background-color: rgb(227, 255, 185);
+    border-radius: 30px;
+    width: 200px;
+}
+.pokeid{
+    text-align: right;
+    opacity: 40%;
+}
+.nomes{
+    font-size: 20px;
+}
+.info{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.li-water{
+    align-self: start;
+}
+.info img{
+    max-width: 100px;
+}
+.info li{
+    margin-bottom: 5px;
+    list-style: none;
+}
+.pokemon.fire{
+    background-color: rgb(253, 122, 89);
+    color: #8f3400;
+}
+.pokemon.water{
+    background-color: rgb(137, 255, 255);
+    color: rgb(43, 135, 211);
+}
+@media (max-width:629px) {
+    ol.pokemons{
+        display: grid;
+        grid-template-columns: repeat(2, auto);
+        grid-template-rows: repeat(3, auto);
+        gap: 10px;
+        list-style: none;
+    }
+}
+@media (max-width:409px) {
+    ol.pokemons{
+        display: grid;
+        grid-template-columns: repeat(1, auto);
+        grid-template-rows: repeat(3, auto);
+        gap: 10px;
+        list-style: none;
+    }
 }
